deploymentV1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  myapp-v1
  namespace: app1
  labels:
    app:  myapp
spec:
  selector:
    matchLabels:
      app: myapp
      version: "1"
  replicas: 2
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app:  myapp
        version: "1"
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  myapp
        image:  us-west2-docker.pkg.dev/woven-ridge-392106/containers/myapp:0.0.1
        ports:
        - name:  http
          containerPort: 8888  
          protocol: TCP
