serviceV1.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-v1
  namespace: default
spec:
  selector:
    app: myapp
    version: "1"
  # type: LoadBalancer
  ports:
  - name: myappports
    protocol: TCP
    port: 80
    targetPort: 8888
