serviceV2.yaml
apiVersion: v1
kind: Service
metadata:
  name: myapp-service-v2
  namespace: apps
spec:
  selector:
    app: myapp
    version: "2"
  # type: LoadBalancer
  ports:
  - name: myappports
    protocol: TCP
    port: 80
    targetPort: 8888
