ingress-v2.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-v2
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: / 
spec:
  rules:
  - host: myapp.example.com
    http:
      paths:
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: myapp-service-v2
            port: 
              number: 80
      - path: /red
        pathType: Prefix
        backend:
          service:
            name: myapp-service-v1
            port: 
              number: 80
